since version 1.0.2
           * fix typo in setup.py (replace "!= ['sdist','clean']" with
             "not in ['sdist','clean']").
version 1.0.2 (git tag v1.0.2)
           * update include geos from 3.2.0 to 3.3.1 so it compiles with gcc
             4.6.
           * added colorbar method that uses axes_grid toolkit to
             create colorbar axes.
           * replace hasattr(arr,'mask') with numpy.ma.isMA(arr).
           * docs updated, moved to matplotlib.github.com/basemap.
           * added optional 1.25, 2.5 and 10 minute land/sea masks (derived from
             GSHHS coastline data). 'resolution'
             and 'grid' kwargs added to drawlsmask and maskoceans.
             'resolution' can be 'c','l','i','h' or 'f', grid can be 1.25,2.5,5 or 10.
           * update shapefile.py from pyshp.googlecode.com to r72.
           * change default land-sea mask (now derived directly from gshhs
             coastline data, default is 5 minutes use coastline resolution =
             'l'). Default for plotting lakes is now True.
           * add etopo method (similar to bluemarble, but plots etopo 
             relief image from www.ngdc.noaa.gov/mgg/global as a map background).
           * add shadedrelief method (similar to bluemarble, but plots shaded
             relief image from naturalearthdata.com as a map background).
           * replace pyshapelib with pure python shapelib.py from
             pyshp.googlecode.com.  Allows full python 3 compatibility.
           * fix doc/conf.py to use inheritance_diagram from Sphinx, not
             matplotlib.
           * fix drawlsmask so cylindrical projections work correctly when
             longitude range outside of -180 to 180.
           * python 3 compatibility.
           * added lic_demo.py to examples (line integral convolution,
             requires scikit.vectorplot).
           * removed deprecated NetCDFFile.
           * added zorder keyword to drawmapscale.