@@ -1,6 +1,11 @@
 since version 1.0.2
            * fix typo in setup.py (replace "!= ['sdist','clean']" with
              "not in ['sdist','clean']").
+           * make sure drawmeridians can handle wrap-around (so that
+             if projection is defined in -180 to 0 and user asks for
+             meridians from 180 to 360 to be drawn, it should work).
+             Only affects projections 'mill','gall','merc' and 'cyl'.
+
 version 1.0.2 (git tag v1.0.2)
            * update include geos from 3.2.0 to 3.3.1 so it compiles with gcc
              4.6.
